<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/delete_info"
        android:textColor="@color/iliadColor"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/textGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvCancelDelete"
            android:background="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/no"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvConfirmDelete"
            android:background="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/yes"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>