<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.buzzo.consumicredito.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="13dp"
            app:srcCompat="@drawable/ic_baseline_settings_24"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato_bold"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:text="@string/setting"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/textGrey" />

    <LinearLayout
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:padding="18dp"
            app:srcCompat="@drawable/ic_baseline_delete_24"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:text="@string/remove_info"
            android:textColor="@color/textDarkGrey"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:padding="18dp"
            app:srcCompat="@drawable/ic_baseline_help_24"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:text="@string/help"
            android:textColor="@color/textDarkGrey"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/textGrey" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/policy_privacy" />


</LinearLayout>